<resources>
    <string name="app_name">Smart_Light</string>
    <string name="about">Разработано "Appstudio_EZ" 2019г.
        \n Smart_Light v.1.2
        \n Требуемая версия Android 4.3 или более поздняя.\n\n</string>
    <string name="yes">Применить</string>

    <string name="help_light1">
      Приложение “Smart Light” реализует возможность удаленного управления яркостью свечения ламп накаливания или светодиодных
        (светодиодные лампы должны поддерживать режим диммирования) как через локальную сеть “WIFI”, так и через интернет, находясь
        в любой точке мира, при условии наличия подключения смартфона к сетям 3G – 4G.
        \n Приложение работает совместно с модулем “Smart Light”, который  подключается к локальной сети через WI-FI роутер, являющийся
        неотъемлемой частью в любом современном жилище (дом, квартира, дача).
        \n На рисунке ниже показано подключение модуля к осветительному прибору.
    </string>
    <string name="help_light2">
    \nНа главный экран выведено значение яркости в процентах – максимум соответствует 100 и при нуле выключено.
        Установка необходимой яркости свечения производится на главном экране путем скроллинга по цветной полоске в середине экрана:\n
    </string>
    <string name="help_light3">
            Необходимую яркость можно также выставить через меню. Вход в меню осуществляется путем клика  на пиктограмму в верхнем правом углу экрана.
    </string>

    <string name="help_light4">
    Для настройки параметров  подключения к локальной сети и некоторых других параметров приложения необходимо перейти в меню.
    </string>
    <string name="help_light5">
           При первом запуске приложения необходимо выполнить сопряжение модуля управления с приложением “ Smart Light ”. Для этого нужно сообщить устройству
        логин и пароль локальной сети. При первом включении модуль разворачивает собственную сеть WI-FI  “Smart_Home_EZ”. Пароль 12345678. Можно подключиться к
        ней и работать с устройством в этой сети (например при тестировании), IP адрес сервера в этом случае в приложении должен быть выставлен 192.168.4.1
        (по умолчанию он уже имеет это значение).
        \n Для настройки работы модуля в домашней сети WI-FI необходимо, чтобы смартфон был уже подключен к ней. В смартфонах версии андроид выше 7.1 желательно
        предварительно в настройках домашней сети выключить автоподключение, а также зайти в настройки -> приложения -> Smart_Light -> разрешения
        (или другие разрешения) -> Состояние WIFI - разрешить подключение/отключение WIFI без запроса. А также нужно включить гео-локацию.
        Ниже приведена пошаговая инструкция настройки.\n
    \n1.	Включаем модуль.
    \n2.	Подключаем смартфон к домашней сети WI-FI.
    \n2.	Запускаем приложение и заходим в пункт меню настройка сети.
    \n3.	Если все сделано корректно, то  поле ввода имя сети будет уже заполнено.
    \n4.	Далее заполняем поле пароль для данной сети WI-FI.
    \n5.	Нажимаем кнопку сохранить и ждем около 2 минут (устройство сохранит в памяти введенные параметры, подключится к сети и получит IP адрес,
        сообщит приложению полученный IP).  \n В случае успешной настройки экран меню пропадет, а на главном экране появится всплывающее сообщение «Выполнено!».
    \n7.	Закрываем приложение и подключаемся заново к домашней сети (в процессе настройки смартфон подключится к сети “Smart_Home_EZ”).
    \n8.	Выключаем модуль и включаем снова через 5 – 10 сек.
    \n9.	Запускаем приложение.
    \n10.   В настройках роутера WI-FI необходимо зарегистрировать подключенное устройство и закрепить за ним постоянный IP адрес.

    \n\n В дальнейшем, приложение при запуске будет автоматически соединяться с устройством при условии нахождения смартфона в домашней сети, а также в любом другом месте, при наличии интернета и соответствующей настройке роутера.
        \n\n Внимание! При смене настроек домашней сети или при необходимости подключить модуль к другой сети, перед этим необходимо сбросить его к настройкам по умолчанию.
        \n\n Важно! Пароль сети, в которой предполагается дальнейшая работа модуля должен содержать 8 символов.

        \n\nНа некоторых устройствах возможна ситуация, когда при нахождении в меню настройки сети не получается отправить данные устройству, всплывает сообщение –
        «Подождите подключения устройства!». Происходит это по причине того, что смартфон за отведенное ему время не успевает переключиться между домашней сетью и сетью  “Smart_Home_EZ”(так как все настройки
        производятся  со смартфоном подключенным именно к этой сети). В этом случае, вам лучше заранее подключить смартфон к сети “Smart_Home_EZ”, затем открыть приложение и войти в
        настройки сети, и далее ввести вручную название домашней сети, заполнить поле пароль и нажать кнопку сохранить. Если же на следующем этапе более 2-3 минут висит
        надпись "Обновление параметров", то нужно, не закрывая приложение, войти в настройки WIFI и принудительно подключить смартфон к сети “Smart_Home_EZ” и после уже вернуться на
        экран приложения. Эта  проблема с переключением между сетями, которая возникает на устройствах с версией андроида выше 9.0.

        \n\nЕсли вы забыли произвести сброс настроек сети при подключении к новой, а старая сеть уже неактивна или недоступна, то возможность
        ввести новые сетевые настройки всё-же есть. При включении модуль в течение 35 сек. работает в режиме точки доступа, разворачивая сеть
        “Smart_Home_EZ”. За это время нужно успеть подключиться к нему находясь в сети “Smart_Home_EZ” и тогда можно будет внести новые
        сетевые настройки.
        \n Если у вас возникла необходимость управлять несколькими осветительными приборами(далее ОП), то вам нужно поочередно подключать и настраивать модули, как
        было описано выше. Для управления нужным вам ОП необходимо длительное нажатие на строку "Сервер ***.***.***.***" (вместо звездочек IP адрес) или же на строку
        с именем ОП, тогда откроется список подключенных диммеров и кликом по выбранному произвести подключение к нему.

    </string>
    <string name="help_light7">
        \n При работе со списком диммеров вызванном длительным нажатием на наименование ОП, вы можете переименовать конкретный ОП. Для этого вам
        нужно в открывшимся списке нажать и удерживать нужный вам ОП для вызова соответствующего меню.
        \n Аналогично происходит добавление новых устройств с уже известным IP адресом или удаление существующих из списка. Для этого необходимо вызвать список
        длительным удержанием строки "Сервер ***.***.***.***" .

        \n\n Для работы через интернет необходимо настроить VPN подключение на роутере и использовать его, находясь вне зоны действия  домашней сети.
        \n Ниже по ссылке, приведен пример настройки VPN-туннеля IPSec, между интернет-центром Keenetic и мобильным устройством на базе операционной системы Android.
    </string>
    <string name="help_light6">
        https://help.keenetic.com/hc/ru/articles/360001085499
    </string>

</resources>
