<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#b1fffbbe"
    android:measureWithLargestChild="false"
    android:minWidth="350dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#fEeFb6">

        <TextView
            android:id="@+id/tvT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="Smart Light"
            android:textColor="#777777"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="#b1fffbbe"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/help_txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:text="@string/help_light1"
                android:textColor="#444444"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/img_help8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/shema_connection" />

            <TextView
                android:id="@+id/help_txt0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/help_light2"
                android:textColor="#444444"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/img_help9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/help_arm" />
            <!-- android:src="@drawable/board_smart_termo" -->
            <TextView
                android:id="@+id/help_txt9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="left"
                android:text="@string/help_light3"
                android:textColor="#444444"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/img_help1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/pic_help1" />

            <TextView
                android:id="@+id/help_txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:text="@string/help_light4"
                android:textColor="#444444"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/img_help2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/help_chap2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:text="- Настройка сети"
                android:textColor="#444444"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/help_txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:text="@string/help_light5"
                android:textColor="#444444"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/img_help10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/main_screen" />
            <TextView
                android:id="@+id/help_txt12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:text="@string/help_light7"
                android:textColor="#444444"
                android:textSize="18sp" />
            <!-- -->
            <TextView
                android:id="@+id/help_txt11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:autoLink="web"
                android:autoText="false"
                android:gravity="left"
                android:text="@string/help_light6"
                android:textColor="#444444"
                android:textSize="18sp" />

            <Button
                android:id="@+id/butOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:text="OK!"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </LinearLayout>

    </ScrollView>
</LinearLayout>